# fog-bot-rs

./: Cargo.toml  README.md
src/: http_get.rs  main.rs  ping.rs
