[package]
name = "fog-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
log = "0.4"
pretty_env_logger = "0.4"
fastping-rs = "0.2"
dns-lookup = "2.0.2"
public-ip = "0.2.2"
curl = "0.4.44"
